--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -167,6 +167,6 @@
     ,"applicationTutorial": "インストール済みのアプリは「インストール済み」に<br>インストールしていないアプリは「アプリケーションリスト」に表示されています。<br>今は何もインストールされていないので、MyBoardをインストールしてみましょう。"
  }
  ,"Dummy": {
-    ,"More": "もっとみる"
+    "More": "もっとみる"
  }
 }
