Responding to issues 114,115 Close #114 Close #115

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -4,6 +4,8 @@
  ,"Add": "Add"
  ,"AddExternalCell": "Add External Cell"
  ,"AddExternalCellPlus": "+ Add External Cell"
+ ,"AddRelation": "Add Relation"
+ ,"AddRelationPlus": "+ Add Relation"
  ,"AddRole": "Add Role"
  ,"AddRolePlus": "+ Add Role"
  ,"Application": "Application management"
@@ -72,6 +74,7 @@
  ,"Register": "Register"
  ,"ReLogin": "Re-Login"
  ,"Relation": "Relation"
+ ,"RelationList": "Relation list"
  ,"Role": "Role"
  ,"RoleList": "Role list"
  ,"SelectBar": "Select BarFile"
