--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -4,6 +4,8 @@
  ,"Add": "追加"
  ,"AddExternalCell": "外部セル追加"
  ,"AddExternalCellPlus": "+ 外部セル追加"
+ ,"AddRelation": "リレーション追加"
+ ,"AddRelationPlus": "+ リレーション追加"
  ,"AddRole": "ロール追加"
  ,"AddRolePlus": "+ ロール追加"
  ,"Application": "アプリ管理"
@@ -72,6 +74,7 @@
  ,"Register": "登録"
  ,"ReLogin": "再ログイン"
  ,"Relation": "リレーション"
+ ,"RelationList": "リレーション一覧"
  ,"Role": "ロール"
  ,"RoleList": "ロール一覧"
  ,"SelectBar": "Barファイル選択"
