--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -1,6 +1,7 @@
 {
   "Account": "Account"
  ,"AccountTitle": "$t(Account): {{title}}"
+ ,"AuthType": "Authentication Type"
  ,"Add": "Add"
  ,"AddExternalCell": "Add External Cell"
  ,"AddExternalCellPlus": "+ Add External Cell"
@@ -55,6 +56,7 @@
  ,"English": "English"
  ,"Error": "Error"
  ,"Failed": "Failed"
+ ,"GoogleAuth": "Google authentication"
  ,"Independent": "Independent"
  ,"Install": "Install"
  ,"Installed": "installed"
@@ -66,6 +68,7 @@
  ,"Name": "Name"
  ,"Overview": "Overview"
  ,"Password": "Password"
+ ,"PasswordAuth": "Password"
  ,"ProfileImage": "Profile Image"
  ,"Provider": "Provider:"
  ,"PublicBOX": "Public BOX"
