--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -56,7 +56,7 @@
  ,"English": "English"
  ,"Error": "Error"
  ,"Failed": "Failed"
- ,"GoogleAuth": "Google authentication"
+ ,"GoogleAuth": "Google"
  ,"Independent": "Independent"
  ,"Install": "Install"
  ,"Installed": "installed"
@@ -68,7 +68,6 @@
  ,"Name": "Name"
  ,"Overview": "Overview"
  ,"Password": "Password"
- ,"PasswordAuth": "Password"
  ,"ProfileImage": "Profile Image"
  ,"Provider": "Provider:"
  ,"PublicBOX": "Public BOX"
