--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -56,7 +56,7 @@
  ,"English": "English"
  ,"Error": "エラー"
  ,"Failed": "失敗"
- ,"GoogleAuth": "Google認証"
+ ,"GoogleAuth": "Google"
  ,"Independent": "無所属"
  ,"Install": "インストール"
  ,"Installed": "インストール済み"
@@ -68,7 +68,6 @@
  ,"Name": "名前"
  ,"Overview": "概要"
  ,"Password": "パスワード"
- ,"PasswordAuth": "パスワード認証"
  ,"ProfileImage": "プロフィール画像"
  ,"Provider": "提供元:"
  ,"PublicBOX": "公開BOX"
