FEAT: Rename Panel name (Community) to avoid confusion
Closes #143

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -27,7 +27,7 @@
  ,"ChangeLng": "Language"
  ,"ChangePass": "Change Password"
  ,"Close": "Close"
- ,"Community": "Community"
+ ,"Community": "Links"
  ,"Create": "Create"
  ,"CreateAccount": "Create Account"
  ,"CreateAccountPlus": "+ Create Account"
