--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -27,7 +27,7 @@
  ,"ChangeLng": "言語"
  ,"ChangePass": "パスワード変更"
  ,"Close": "閉じる"
- ,"Community": "コミュニティ"
+ ,"Community": "つながり"
  ,"Create": "作成"
  ,"CreateAccount": "新規アカウント"
  ,"CreateAccountPlus": "+ 新規アカウント"
