Responding to issues 122 1. Add detailed screen of installed application, add uninstall function 2. After installing and uninstalling, it changed to return to the top of the application screen what was transitioning to the main screen
Close #122

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -101,6 +101,7 @@
  ,"confirmDeleteRelationAssign": "Remove the association between this relation( {{value1}}:{{value2}} ). Is it OK?"
  ,"confirmDeleteRole": "You want to delete this role ( {{value1}}:{{value2}} ). Is it OK?"
  ,"confirmInstallation": "Perform the installation. Is it OK?"
+ ,"confirmUninstallation": "Perform the uninstallation. Is it OK?"
  ,"confirmNewPass": "Confirm (type new password again)"
  ,"errorBarFileNotSelected": "The bar file is not selected."
  ,"errorBarFileUrlNotEntered": "bar File URL is not entered"
