Responding to issues 160 1. I added an error message 2. Fixed the screen during Google login authentication 3. When the Google authentication login fails, it returns to the login screen and displays an error message
Close #160

--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -6,6 +6,7 @@
  ,"Add": "追加"
  ,"AddExternalCell": "外部セル追加"
  ,"AddExternalCellPlus": "+ 外部セル追加"
+ ,"AddMember": "メンバー追加"
  ,"AddRelation": "リレーション追加"
  ,"AddRelationPlus": "+ リレーション追加"
  ,"AddRole": "ロール追加"
@@ -53,7 +54,7 @@
  ,"EditAccount": "アカウント編集"
  ,"EditProfile": "プロフィール編集"
  ,"EditRelation": "リレーション編集"
- ,"EditRole": "ロール編集"
+ ,"EditRole": "役割を編集"
  ,"English": "English"
  ,"Error": "エラー"
  ,"Failed": "失敗"
@@ -72,6 +73,7 @@
  ,"ProfileImage": "プロフィール画像"
  ,"Provider": "提供元:"
  ,"PublicBOX": "公開BOX"
+ ,"RegistrationDate": "登録日"
  ,"QRCode": "QRコード（セルURLs）"
  ,"QRScanner": "QR スキャナー"
  ,"Register": "登録"
@@ -88,6 +90,7 @@
  ,"Success": "成功"
  ,"Uninstall": "アンインストール"
  ,"Update": "変更"
+ ,"UserCustomRole": "ユーザーカスタムロール"
  ,"WatchPublicBOX": "公開BOX閲覧"
  ,"accountNamePlaceHolder": "アカウント名を入力して下さい。"
  ,"accountPassPlaceHolder": "パスワードを入力して下さい。"
@@ -108,6 +111,7 @@
  ,"errorBoxStatusCommunication": "通信に失敗しました。時間を置いてもう一度お試しください。"
  ,"errorBoxStatusNotFound": "Boxが存在しません。"
  ,"errorFileFormat": "ファイル形式が正しくありません。"
+ ,"errorGoogleLogin":  "このGoogleアカウントではログイン出来ません。別のアカウントでログイン後、Googleアカウントの設定を行ってください。"
  ,"errorReadingFile": "ファイルの読み込みに失敗しました。"
  ,"errorValidateEndWithCell": "セルのURLは最後に'/'を入れてください。"
  ,"errorValidateEndWithExternalCell": "外部セルのURLは最後に'/'を入れてください。"
