--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -6,6 +6,7 @@
  ,"Add": "Add"
  ,"AddExternalCell": "Add External Cell"
  ,"AddExternalCellPlus": "+ Add External Cell"
+ ,"AddMember": "Add Member"
  ,"AddRelation": "Add Relation"
  ,"AddRelationPlus": "+ Add Relation"
  ,"AddRole": "Add Role"
@@ -72,6 +73,7 @@
  ,"ProfileImage": "Profile Image"
  ,"Provider": "Provider:"
  ,"PublicBOX": "Public BOX"
+ ,"RegistrationDate": "Registration date"
  ,"QRCode": "QR Code (Cell URL)"
  ,"QRScanner": "QRScanner"
  ,"Register": "Register"
@@ -88,6 +90,7 @@
  ,"Success": "success"
  ,"Uninstall": "Uninstall"
  ,"Update": "Update"
+ ,"UserCustomRole": "User Custom Role"
  ,"WatchPublicBOX": "Watch public BOX"
  ,"accountNamePlaceHolder": "Please enter the account name."
  ,"accountPassPlaceHolder": "Please enter a password."
@@ -108,6 +111,7 @@
  ,"errorBoxStatusCommunication": "Communication failed. Specified Box does not exist or Please try again later."
  ,"errorBoxStatusNotFound": "Box does not exist."
  ,"errorFileFormat": "The file format is incorrect."
+ ,"errorGoogleLogin":  "I can not log in with this Google account. Please login with a different account and set up your Google Account."
  ,"errorReadingFile": "Failed to read the file."
  ,"errorValidateEndWithCell": "Cell URL must end with '/'"
  ,"errorValidateEndWithExternalCell": "External cell URL must end with '/'"
