Reflecting the new design on HomeApp

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -106,6 +106,7 @@
  ,"confirmInstallation": "Perform the installation. Is it OK?"
  ,"confirmUninstallation": "Perform the uninstallation. Is it OK?"
  ,"confirmNewPass": "Confirm (type new password again)"
+ ,"confirmSendMessage":  "Send a message. Is it OK?"
  ,"errorBarFileNotSelected": "The bar file is not selected."
  ,"errorBarFileUrlNotEntered": "bar File URL is not entered"
  ,"errorBoxStatusCommunication": "Communication failed. Specified Box does not exist or Please try again later."
@@ -138,6 +139,7 @@
  ,"notExistTargetCell": "The target cell does not exist."
  ,"notPermissionView": "You do not have view permission."
  ,"notSelectTarget": "It is not selected."
+ ,"notSendTarget": "Destination is not specified."
  ,"passwordNotMatch": "Password do not match. Please enter the correct password."
  ,"pleaseBetweenCharacter": "Please enter between 6 to 32 characters."
  ,"pleaseCharacterType": "Please enter Character Type(Half Size Alphanumeric, '-', '_')"
