--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -106,6 +106,7 @@
  ,"confirmInstallation": "インストールします。よろしいですか？"
  ,"confirmUninstallation": "アンインストールします。よろしいですか？"
  ,"confirmNewPass": "確認の為、パスワードを再度入力して下さい。"
+ ,"confirmSendMessage":  "メッセージを送信します。よろしいですか？"
  ,"errorBarFileNotSelected": "barファイルが選択されていません。"
  ,"errorBarFileUrlNotEntered": "barファイルのURLが入力されていません。"
  ,"errorBoxStatusCommunication": "通信に失敗しました。時間を置いてもう一度お試しください。"
@@ -138,6 +139,7 @@
  ,"notExistTargetCell": "対象のセルが存在しません。"
  ,"notPermissionView": "閲覧権限がありません。"
  ,"notSelectTarget": "選択されていません。"
+ ,"notSendTarget": "送信先が指定されてません。"
  ,"passwordNotMatch": "パスワードが一致していません。 正しく入力して下さい。"
  ,"pleaseBetweenCharacter": "6～32文字で入力して下さい。"
  ,"pleaseCharacterType": "入力出来る文字は半角英数字、'-'、 '_'のみです。"
@@ -156,7 +158,7 @@
  ,"selectRole": "ロールを選択して下さい"
  ,"selectRelationAssign": "割り当てる外部セルを選択して下さい。"
  ,"selectRoleAssign": "割り当てるロールを選択して下さい。"
- ,"successChangePass": "パスワードを変更しました。<br>ログインし直して下さい。"
+ ,"successChangePass": "パスワードを変更しました。\nログインし直して下さい。"
  ,"warningBoxInstallAllow": "提供元が不明のBoxインストールを許可する"
  ,"warningBoxInstallNotAllowed": "提供元が不明のBoxインストールを許可しない"
 
