--- a/html/locales/en/translation.json
+++ b/html/locales/en/translation.json
@@ -73,6 +73,7 @@
  ,"Menu": "Menu"
  ,"Message": "Message"
  ,"Name": "Name"
+ ,"NoTarget": "No Target"
  ,"Overview": "Overview"
  ,"Password": "Password"
  ,"Profile": "Profile"
