--- a/html/locales/ja/translation.json
+++ b/html/locales/ja/translation.json
@@ -73,6 +73,7 @@
  ,"Menu": "メニュー"
  ,"Message": "メッセージ"
  ,"Name": "名前"
+ ,"NoTarget": "存在しないセル"
  ,"Overview": "概要"
  ,"Password": "パスワード"
  ,"Profile": "プロフィール"
