FEATURES: Password change screen renewal
Closes #242

--- a/html/locales/en/translation.json
+++ b/html/locales/en/translation.json
@@ -31,7 +31,7 @@
  ,"ChangePass": "Change Password"
  ,"Close": "Close"
  ,"Community": "Links"
- ,"Confirmation": "Confirmation"
+ ,"Confirmation": "Verify"
  ,"Create": "Create"
  ,"CreateAccount": "Create Account"
  ,"CreateAccountPlus": "+ Create Account"
@@ -73,6 +73,7 @@
  ,"Menu": "Menu"
  ,"Message": "Message"
  ,"Name": "Name"
+ ,"NewPassword": "New"
  ,"NoTarget": "No Target"
  ,"Overview": "Overview"
  ,"Password": "Password"
@@ -115,8 +116,9 @@
  ,"confirmDeleteRole": "You want to delete this role ( {{value1}}:{{value2}} ). Is it OK?"
  ,"confirmInstallation": "Perform the installation. Is it OK?"
  ,"confirmUninstallation": "Perform the uninstallation. Is it OK?"
- ,"confirmNewPass": "Confirm (type new password again)"
+ ,"confirmNewPass": "re-enter password"
  ,"confirmSendMessage":  "Send a message. Is it OK?"
+ ,"enterPassword": "enter password"
  ,"errorBarFileNotSelected": "The bar file is not selected."
  ,"errorBarFileUrlNotEntered": "bar File URL is not entered"
  ,"errorBoxStatusCommunication": "Communication failed. Specified Box does not exist or Please try again later."
@@ -145,7 +147,7 @@
  ,"logoutConfirm": "Log out?"
  ,"maxExternalCellNameLengthError": "External cell name cannot exceed 128 characters."
  ,"maxUrlLengthError": "URL cannot exceed 1024 characters"
- ,"newPassPlaceHolder":"New Password (6 to 32 Character, Character Type(Half Size Alphanumeric, '-', '_'))"
+ ,"newPassPlaceHolder":"6 to 32 Character, Character Type (Half Size Alphanumeric, '-', '_')"
  ,"notExistTargetCell": "The target cell does not exist."
  ,"notPermissionView": "You do not have view permission."
  ,"notSelectTarget": "It is not selected."
