--- a/html/locales/ja/translation.json
+++ b/html/locales/ja/translation.json
@@ -73,6 +73,7 @@
  ,"Menu": "メニュー"
  ,"Message": "メッセージ"
  ,"Name": "名前"
+ ,"NewPassword": "新規"
  ,"NoTarget": "存在しないセル"
  ,"Overview": "概要"
  ,"Password": "パスワード"
@@ -116,8 +117,9 @@
  ,"confirmDeleteRole": "このロールを削除します ( {{value1}}:{{value2}} )。 よろしいですか？"
  ,"confirmInstallation": "インストールします。よろしいですか？"
  ,"confirmUninstallation": "アンインストールします。よろしいですか？"
- ,"confirmNewPass": "確認の為、パスワードを再度入力して下さい。"
+ ,"confirmNewPass": "パスワードを再入力"
  ,"confirmSendMessage":  "メッセージを送信します。よろしいですか？"
+ ,"enterPassword": "パスワードを入力"
  ,"errorBarFileNotSelected": "barファイルが選択されていません。"
  ,"errorBarFileUrlNotEntered": "barファイルのURLが入力されていません。"
  ,"errorBoxStatusCommunication": "通信に失敗しました。時間を置いてもう一度お試しください。"
@@ -146,7 +148,7 @@
  ,"logoutConfirm": "ログアウトしますか？"
  ,"maxExternalCellNameLengthError": "外部セル名は128文字以内で入力して下さい。"
  ,"maxUrlLengthError": "URLは1024文字以下で入力して下さい。"
- ,"newPassPlaceHolder":"新しいパスワード (6～32文字, 入力可能文字(半角英数字, '-', '_'))"
+ ,"newPassPlaceHolder":"6～32文字、入力可能文字（半角英数字, '-', '_'）"
  ,"notExistTargetCell": "対象のセルが存在しません。"
  ,"notPermissionView": "閲覧権限がありません。"
  ,"notSelectTarget": "選択されていません。"
