FEATURES: Add privacy policy page to menu
Download markdown file and convert the contents to HTML using marked.js
(Japanese privacy policy is translated by Google Translate)

Closes #243

--- a/html/locales/en/translation.json
+++ b/html/locales/en/translation.json
@@ -77,6 +77,8 @@
  ,"NoTarget": "No Target"
  ,"Overview": "Overview"
  ,"Password": "Password"
+ ,"PrivacyPolicy": "Privacy Policy"
+ ,"PrivacyPolicyURL": "__/html/privacy_policy_en.md"
  ,"Profile": "Profile"
  ,"ProfileImage": "Profile Image"
  ,"Provider": "Provider:"
