--- a/html/locales/ja/translation.json
+++ b/html/locales/ja/translation.json
@@ -77,6 +77,8 @@
  ,"NoTarget": "存在しないセル"
  ,"Overview": "概要"
  ,"Password": "パスワード"
+ ,"PrivacyPolicy": "プライバシーポリシー"
+ ,"PrivacyPolicyURL": "__/html/privacy_policy_ja.md"
  ,"Profile": "プロフィール"
  ,"ProfileImage": "プロフィール画像"
  ,"Provider": "提供元:"
